unpackaged/post/07_heda_object_tracking/objects/hed__Course_Enrollment__c.object
<CustomObject>
    <description>Represents a connection to a Course Offering.</description>
	<label>Course Connection</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Course Connection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Connections</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>hed__Course_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Course Offering the student or faculty member is involved with.</description>
        <inlineHelpText>The Course Offering the student or faculty member is involved with.</inlineHelpText>
        <label>Course Offering ID</label>
        <referenceTo>hed__Course_Offering__c</referenceTo>
        <relationshipLabel>Course Connection</relationshipLabel>
        <relationshipName>Course_Enrollment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Attempted__c</fullName>
        <description>The number of credits the student is trying to earn through this Course Offering.</description>
        <inlineHelpText>The number of credits the student is trying to earn through this Course Offering.</inlineHelpText>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Grade__c</fullName>
        <description>The numeric grade the student earned in this Course Offering.</description>
        <inlineHelpText>The numeric grade the student earned in this Course Offering.</inlineHelpText>
        <label>Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>Indicates whether this is a current or former Course Connection.</description>
        <inlineHelpText>Indicates whether this is a current or former Course Connection.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrew</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Enrollment_Status__c</fullName>
        <label>Enrollment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enrollment Requested</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Withdrawal Requested</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Withdrawn With Penalty</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Amount__c</fullName>
        <inlineHelpText>Calculated Student fee for this course</inlineHelpText>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Type_Option__c</fullName>
        <inlineHelpText>How the student will pay for this course</inlineHelpText>
        <label>Fee Type Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>rio_ed__Fee_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type_Option</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Fee_Type__c</fullName>
        <inlineHelpText>How the student will pay for this course</inlineHelpText>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rio_ed__Fee_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rio_ed__Release_Grades__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to release grades to students and trigger the completion engine</inlineHelpText>
        <label>Release Grades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rio_ed__Requirement_Met__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is checked when all course connection requirement(s) is completed.</inlineHelpText>
        <label>Requirement Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rio_ed__Upfront_Payment__c</fullName>
        <inlineHelpText>Amount that student can optionally elect to pay upfront (For HELP loans etc)</inlineHelpText>
        <label>Upfront Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    
</CustomObject>